[FIXED #104240680] Objectlink's clickable redirect does not prevent click propagation on Safari
- removed a focus trigger handler form enterEditMode to evade looping of the event
- added a div wrapper around the link arrow icon so that the inline edit can recognize the source
  element of the focus event; i.e. if the link arrow is focused it will not call enterEditMode method.

--- a/src/client/scss/x/_font.scss
+++ b/src/client/scss/x/_font.scss
@@ -92,3 +92,6 @@ $icon-question-circle: $fa-var-question-circle !default;
 .icon-massmail:before { content: $icon-massmail }
 .icon-question:before { content: $icon-question }
 .icon-question-circle:before { content: $icon-question-circle }
+
+// Color class
+.blackiconcolor {color:black;}
